[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.0"
futures = "0.3.17"
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube = { version = "0.65.0", features = ["runtime", "derive"] }
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["full"] }
tui = "0.17.0"
serde = "1.0.136"